--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Decrypt
         run: |
           ls
-          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json ./secret.json.gpg
+          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
         env: 
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: Print our file content 
